fix: bug fix on rendering select comp on mobile

--- a/src/scss/toast.scss
+++ b/src/scss/toast.scss
@@ -4,6 +4,7 @@
   box-shadow: rgba(18, 52, 77, 0.16) 0px 2px 18px 0px, rgba(18, 52, 77, 0.06) 0px 2px 4px 0px;
   border-radius: 4px;
   max-width: 384px;
+  min-width: 320px;
   width: 100%;
   background-color: $white;
 
